# 3DHeadTracker

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraTest.cpp  LockQueue.cpp  LockQueue.hpp  README.md  StereoCamera.cpp  StereoCamera.hpp  main.cpp  opencv_test.cpp  settings.sh
